--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <a class="navbar-brand js-scroll-trigger" href="/index.html">
                 
                 Código Front end
                 <!--
@@ -49,8 +49,8 @@
                 </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">Para Você</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="downloads.html">E-book</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="http://bit.ly/marketingDigitalDo0">Aprenda do 0</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="">Team</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
@@ -61,8 +61,11 @@
     <!-- Masthead-->
     <header class="masthead">
         <div class="container">
-            <div class="masthead-subheading">Como Começar a Trabalhar com Marketing Digital </div>
-            <div class="masthead-heading text-uppercase">O Seu Guia Completo</div>
+            <div style="background-color: rgba(0, 0, 0, 0.425); border-radius: 20px; padding-top: 20px;padding-bottom: 20px; margin-bottom: 15px;">
+
+                <div class="masthead-subheading">Como Começar a Lucrar com Marketing Digital </div>
+                <div class="masthead-heading text-uppercase">Download Grátis</div>
+            </div>
             <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="">Download</a>
         </div>
     </header>
@@ -79,32 +82,56 @@
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-play" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M4 0h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zm0 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H4z"/>
+                            <path d="M6 10.117V5.883a.5.5 0 0 1 .757-.429l3.528 2.117a.5.5 0 0 1 0 .858l-3.528 2.117a.5.5 0 0 1-.757-.43z"/>
+                          </svg>
+                        <!--
+
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        -->
                         </span>
                     <h4 class="my-3">Canal </h4>
                     <p class="text-muted">Assine nosso canal no youtube</p>
+                    <a target="blank" href="https://www.youtube.com/channel/UCd4MhWhSeqK1Ga4OKOPSxSw?view_as=subscriber">Inscreva-se</a>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
+                        <!--
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                                <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                            -->
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cloud-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"/>
+                                <path fill-rule="evenodd" d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z"/>
+                              </svg>
                         </span>
                     <h4 class="my-3">Dowload Grátis</h4>
                     <p class="text-muted">
-                        E-book Grátis criando e ganhando dinheiro com site em 5 passos <br>
-                        <small>Aprenda a criar sites de eforma muito simples e monetizalos rapidamente</small>
+                        E-book ensina <br>
+                        <small>como ganhar dinheiro com site em 5 passos simples rapidamente</small>
                     </p>
+                    <a target="blank" href="">Download</a>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cash-stack" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14 3H1a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1h-1z"/>
+                            <path fill-rule="evenodd" d="M15 5H1v8h14V5zM1 4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H1z"/>
+                            <path d="M13 5a2 2 0 0 0 2 2V5h-2zM3 5a2 2 0 0 1-2 2V5h2zm10 8a2 2 0 0 1 2-2v2h-2zM3 13a2 2 0 0 0-2-2v2h2zm7-4a2 2 0 1 1-4 0 2 2 0 0 1 4 0z"/>
+                          </svg>
+                        <!--
+
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                        -->
                         </span>
                     <h4 class="my-3">Curso completo para criar um negocio online do 0</h4>
                     <p class="text-muted">
                         Curso recomendado por mim pra você que quer ganhar dinheiro na internet, e trabalhar em casa, eu fiz esse curso e recomendo
                     </p>
+                    <a target="blank" href="http://bit.ly/marketingdigitaldoresultado">Começe</a>
                 </div>
             </div>
         </div>
@@ -127,8 +154,13 @@
                             <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Threads</div>
-                            <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                            <div class="portfolio-caption-heading">Html - Css</div>
+                            <div class="portfolio-caption-subheading text-muted">
+                                <a href="html-css.html">
+
+                            Aprender mais
+                            </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -141,8 +173,8 @@
                             <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Explore</div>
-                            <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                            <div class="portfolio-caption-heading">JavaScript</div>
+                            <div class="portfolio-caption-subheading text-muted"><a href="Javascript.html">Aprenda Mais</a></div>
                         </div>
                     </div>
                 </div>
@@ -155,8 +187,13 @@
                             <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Finish</div>
-                            <div class="portfolio-caption-subheading text-muted">Identity</div>
+                            <div class="portfolio-caption-heading">Marketing Digital</div>
+                            <div class="portfolio-caption-subheading text-muted">
+                                <a href="marketingdigital.html">
+
+                                   Aprenda Mais
+                               </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -169,8 +206,12 @@
                             <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Lines</div>
-                            <div class="portfolio-caption-subheading text-muted">Branding</div>
+                            <div class="portfolio-caption-heading">S.E.O</div>
+                            <div class="portfolio-caption-subheading text-muted">
+                                <a href="s.e.o.html">
+                                    Aprenda Mais
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -183,8 +224,10 @@
                             <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Southwest</div>
-                            <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                            <div class="portfolio-caption-heading">Wordpress</div>
+                            <div class="portfolio-caption-subheading text-muted">
+                                <a href="wordpress.html">Wordpress</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -197,8 +240,10 @@
                             <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Window</div>
-                            <div class="portfolio-caption-subheading text-muted">Photography</div>
+                            <div class="portfolio-caption-heading">Programação</div>
+                            <div class="portfolio-caption-subheading text-muted">
+                                <a href="programacao.html">Aprenda Mais</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -323,6 +368,7 @@
 
                 </div>
             -->
+
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <p class="large text-muted">
