--- a/politicadeprivacidade.html
+++ b/politicadeprivacidade.html
@@ -2,6 +2,18 @@
 <html lang="pt-br">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136960889-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-136960889-2');
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
@@ -22,7 +34,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <a class="navbar-brand js-scroll-trigger" href="/index.html">
                 
                 Código Front end
                 <!--
@@ -48,8 +60,11 @@
     <!-- Masthead-->
     <header class="masthead">
         <div class="container">
-            <div class="masthead-subheading">Como Começar a Trabalhar com Marketing Digital </div>
-            <div class="masthead-heading text-uppercase">O Seu Guia Completo</div>
+            <div style="background-color: rgba(0, 0, 0, 0.425); border-radius: 20px; padding-top: 20px;padding-bottom: 20px; margin-bottom: 15px;">
+
+                <div class="masthead-subheading">Como Começar a Lucrar com Marketing Digital </div>
+                <div class="masthead-heading text-uppercase">Download Grátis</div>
+            </div>
             <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="">Download</a>
         </div>
     </header>
