--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="/index.html">
+            <a class="navbar-brand js-scroll-trigger" href="https://carlos-alexandre-leutz.github.io/Blog-Codigo-Front-End/downloads.html">
                 
                 Código Front end
                 <!--
