--- a/submissao-bem-sucedida.html
+++ b/submissao-bem-sucedida.html
@@ -62,30 +62,24 @@
         <div class="container">
             <div style="background-color: rgba(0, 0, 0, 0.425); border-radius: 20px; padding-top: 20px;padding-bottom: 20px; margin-bottom: 15px;">
 
-                <div class="masthead-subheading">Como Começar a Lucrar com Marketing Digital </div>
-                <div class="masthead-heading text-uppercase">Download Grátis</div>
+                <div class="masthead-subheading">Obrigado</div>
+                <div class="masthead-heading text-uppercase">Confira seu e-mail se e-book foi enviado para lá
+                    <br>
+                    <small>
+                        Pode demorar até 5 minutos para chegar
+                    </small>
+                </div>
+                <div class="masthead-subheading">Em quanto isso veja o que temos a mais para te ajudar
+                    <a href="http://bit.ly/codigo-font-fno-mkt">DESCOBRIR</a>
+                </div>
             </div>
-            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="">Download</a>
+
         </div>
     </header>
     <section class="page-section" id="services">
         <div class="container">
             <div class="container">
-                <form method="post" enctype="multipart/form-data" action="https://30.e-goi.com//w/1e3e1P6Xe6BAtUHsM2e5042c-4d">
-                    <input type="hidden" name="lista" value="1">
-                    <input type="hidden" name="cliente" value="392817">
-                    <input type="hidden" name="lang" id="lang_id" value="br">
-                    <input type="hidden" name="formid" id="formid" value="3">
-                    <label for="fname_5" easylabel="Nome">
-                      Nome  * 
-                    </label>
-                    <input type="text" name="fname_5" id="fname_5" value="">
-                    <label for="email_6" easylabel="E-mail">
-                      E-mail  * 
-                    </label>
-                    <input type="email" name="email_6" id="email_6" value="">
-                    <input type="submit" value="submit">
-                </form>
+                Ver mais
             </div>
         </div>
     </section>
