--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="masthead-subheading">Como Começar a Lucrar com Marketing Digital </div>
                 <div class="masthead-heading text-uppercase">Download Grátis</div>
             </div>
-            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="">Download</a>
+            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="submissao-bem-sucedida.html">Download</a>
         </div>
     </header>
     <!-- Services-->
