--- a/programacao.html
+++ b/programacao.html
@@ -73,6 +73,7 @@
             <div class="container">
                 programação
             </div>
+            <iframe width="786" height="441" src="https://www.youtube.com/embed/tnxjdJjfhEQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
     <footer class="footer py-4" style="background-color: #333;">
