erro nas rotas das imgs

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
     <!-- Core theme JS-->
 
-    <script src="/root/js/scripts.js"></script>
+    <script src="root/js/scripts.js"></script>
 
     <!--
 
